--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <section id="press">
 
-    <img class="press-images" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-images" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-images" src="images/tnw.png" alt="tnw-logo">
     <img class="press-images" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-images" src="images/mashable.png" alt="mashable-logo">
